language/move-lang/tests/move_check/typing/bad_type_argument_arity_struct.exp
error[E03008]: too few type arguments
  ┌─ tests/move_check/typing/bad_type_argument_arity_struct.move:7:13
  │
7 │         s1: S,
  │             ^ Invalid instantiation of '0x42::M::S'. Expected 1 type argument(s) but got 0

error[E03008]: too few type arguments
  ┌─ tests/move_check/typing/bad_type_argument_arity_struct.move:8:13
  │
8 │         s2: S<>,
  │             ^^^ Invalid instantiation of '0x42::M::S'. Expected 1 type argument(s) but got 0

error[E03007]: too many type arguments
  ┌─ tests/move_check/typing/bad_type_argument_arity_struct.move:9:13
  │
9 │         s3: S<bool, u64>,
  │             ^^^^^^^^^^^^ Invalid instantiation of '0x42::M::S'. Expected 1 type argument(s) but got 2

error[E03008]: too few type arguments
   ┌─ tests/move_check/typing/bad_type_argument_arity_struct.move:13:13
   │
13 │         s1: S,
   │             ^ Invalid instantiation of '0x42::M::S'. Expected 1 type argument(s) but got 0

error[E03008]: too few type arguments
   ┌─ tests/move_check/typing/bad_type_argument_arity_struct.move:14:13
   │
14 │         s2: S<>,
   │             ^^^ Invalid instantiation of '0x42::M::S'. Expected 1 type argument(s) but got 0

error[E03007]: too many type arguments
   ┌─ tests/move_check/typing/bad_type_argument_arity_struct.move:15:13
   │
15 │         s3: S<u64, bool>,
   │             ^^^^^^^^^^^^ Invalid instantiation of '0x42::M::S'. Expected 1 type argument(s) but got 2

error[E03007]: too many type arguments
   ┌─ tests/move_check/typing/bad_type_argument_arity_struct.move:16:15
   │
16 │         s4: S<S<u64, bool>>
   │               ^^^^^^^^^^^^ Invalid instantiation of '0x42::M::S'. Expected 1 type argument(s) but got 2

error[E03008]: too few type arguments
   ┌─ tests/move_check/typing/bad_type_argument_arity_struct.move:17:9
   │
17 │     ): (S, S<>, S<u64, address>, S<S<u64, u8>>) {
   │         ^ Invalid instantiation of '0x42::M::S'. Expected 1 type argument(s) but got 0

error[E03008]: too few type arguments
   ┌─ tests/move_check/typing/bad_type_argument_arity_struct.move:17:12
   │
17 │     ): (S, S<>, S<u64, address>, S<S<u64, u8>>) {
   │            ^^^ Invalid instantiation of '0x42::M::S'. Expected 1 type argument(s) but got 0

error[E03007]: too many type arguments
   ┌─ tests/move_check/typing/bad_type_argument_arity_struct.move:17:17
   │
17 │     ): (S, S<>, S<u64, address>, S<S<u64, u8>>) {
   │                 ^^^^^^^^^^^^^^^ Invalid instantiation of '0x42::M::S'. Expected 1 type argument(s) but got 2

error[E03007]: too many type arguments
   ┌─ tests/move_check/typing/bad_type_argument_arity_struct.move:17:36
   │
17 │     ): (S, S<>, S<u64, address>, S<S<u64, u8>>) {
   │                                    ^^^^^^^^^^ Invalid instantiation of '0x42::M::S'. Expected 1 type argument(s) but got 2

error[E03008]: too few type arguments
   ┌─ tests/move_check/typing/bad_type_argument_arity_struct.move:27:21
   │
27 │     fun s<T>(f: T): S {
   │                     ^ Invalid instantiation of '0x42::M::S'. Expected 1 type argument(s) but got 0

